@@ -23,64 +23,64 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import org.junit.jupiter.api.Test;
+import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
+import org.junit.jupiter.api.Test;
 
 class HttpdFilterTest {
 
   @Test
   void testEmpty() {
     assertThrows(IllegalArgumentException.class, () -> {
-      new HttpdFilter(ImmutableMap.of());
+      new HttpdFilter(Map.of());
     });
   }
 
   @Test
   void testOnlyType() {
     assertThrows(IllegalArgumentException.class, () -> {
-      new HttpdFilter(ImmutableMap.of("type", "allow"));
+      new HttpdFilter(Map.of("type", "allow"));
     });
   }
 
   @Test
   void testTypeMissing() {
     assertThrows(IllegalArgumentException.class, () -> {
-      new HttpdFilter(ImmutableMap.of("location", "/abc"));
+      new HttpdFilter(Map.of("location", "/abc"));
     });
   }
 
   @Test
   void testIllegalType() {
     assertThrows(IllegalArgumentException.class, () -> {
-      new HttpdFilter(ImmutableMap.of("location", "/abc", "type", "this_is_not_a_valid_value"));
+      new HttpdFilter(Map.of("location", "/abc", "type", "this_is_not_a_valid_value"));
     });
   }
 
   @Test
   void testIllegalRegexp() {
     assertThrows(IllegalArgumentException.class, () -> {
-      new HttpdFilter(ImmutableMap.of("locationMatch", "(abc", "type", "allow"));
+      new HttpdFilter(Map.of("locationMatch", "(abc", "type", "allow"));
     });
   }
 
   @Test
   void testInvalidParam() {
     assertThrows(IllegalArgumentException.class, () -> {
-      new HttpdFilter(ImmutableMap.of("location", "/abc", "type", "allow", "invalidParam", "value"));
+      new HttpdFilter(Map.of("location", "/abc", "type", "allow", "invalidParam", "value"));
     });
   }
 
   @Test
   void testMoreThanOneTargetParam() {
     assertThrows(IllegalArgumentException.class, () -> {
-      new HttpdFilter(ImmutableMap.of("location", "/abc", "locationMatch", "/abc(/.*)?", "type", "allow"));
+      new HttpdFilter(Map.of("location", "/abc", "locationMatch", "/abc(/.*)?", "type", "allow"));
     });
   }
 
   @Test
   void testLocation() {
-    HttpdFilter underTest = new HttpdFilter(ImmutableMap.of("location", "/abc", "type", "allow"));
+    HttpdFilter underTest = new HttpdFilter(Map.of("location", "/abc", "type", "allow"));
     assertEquals(HttpdFilterType.ALLOW, underTest.getType());
     assertEquals("/abc", underTest.getLocation());
     assertNull(underTest.getLocationMatch());
@@ -89,7 +89,7 @@ class HttpdFilterTest {
 
   @Test
   void testLocationMatch() {
-    HttpdFilter underTest = new HttpdFilter(ImmutableMap.of("locationMatch", "/abc(/.*)?", "type", "allow"));
+    HttpdFilter underTest = new HttpdFilter(Map.of("locationMatch", "/abc(/.*)?", "type", "allow"));
     assertEquals(HttpdFilterType.ALLOW, underTest.getType());
     assertNull(underTest.getLocation());
     assertEquals("/abc(/.*)?", underTest.getLocationMatch());
